--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon app",
     "start": "node app"
-
-
   },
   "author": "swaggp",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.10.0",
     "nodemon": "^2.0.7"
   },
   "engines": {
