--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "config": "^3.3.6",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-handlebars": "^5.3.0",
     "express-validator": "^6.10.0",
+    "hbs": "^4.1.1",
     "mongoose": "^5.12.3",
     "nodemon": "^2.0.7"
   },
