--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-handlebars": "^5.3.0",
     "express-validator": "^6.10.0",
     "hbs": "^4.1.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
     "nodemon": "^2.0.7"
   },
