adding validation to signup form

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "swaggp",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "config": "^3.3.6",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
