--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app",
-    "start": "node app"
+    "server": "nodemon app",
+    "start": "node app",
+    "client":"npm start --prefix client",
+    "devstart":"concurrently \"npm run server\" \"npm run client\""
   },
   "author": "swaggp",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "concurrently": "^6.2.0",
     "config": "^3.3.6",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
