--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gravatar": "^1.8.1",
     "hbs": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^5.12.3",
     "nodemon": "^2.0.7"
   },
